Fixing build errors when enable_vulkan=true

Recent modification of class locations / names were causing build errors in
vulkan related files.
Corrected them in this patch.

you need to set enable_vulkan=true to verify this.

BUG=682523

Test: Build code with enable_vulkan=true
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I812d83c6eae7a483c905928cdabf6c5fb43f347a
Reviewed-on: https://chromium-review.googlesource.com/645589
Commit-Queue: Chandan Padhi <c.padhi@samsung.com>
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: Chandan Padhi <c.padhi@samsung.com>
Reviewed-by: ccameron chromium <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501890}