cc/output/vulkan_renderer.cc
@@ -4,6 +4,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // found in the LICENSE file.
 
 #include "cc/output/vulkan_renderer.h"
+#include "cc/output/output_surface.h"
 #include "cc/output/output_surface_frame.h"
 
 namespace cc {
@@ -16,9 +17,9 @@ void VulkanRenderer::SwapBuffers(std::vector<ui::LatencyInfo> latency_info) {
   output_surface_->SwapBuffers(std::move(output_frame));
 }
 
-VulkanRenderer::VulkanRenderer(const RendererSettings* settings,
+VulkanRenderer::VulkanRenderer(const viz::RendererSettings* settings,
                                OutputSurface* output_surface,
-                               ResourceProvider* resource_provider,
+                               DisplayResourceProvider* resource_provider,
                                TextureMailboxDeleter* texture_mailbox_deleter,
                                int highp_threshold_min)
     : DirectRenderer(settings, output_surface, resource_provider) {}
@@ -27,12 +28,15 @@ void VulkanRenderer::DidChangeVisibility() {
   NOTIMPLEMENTED();
 }
 
-void VulkanRenderer::BindFramebufferToOutputSurface(DrawingFrame* frame) {
+void VulkanRenderer::BindFramebufferToOutputSurface() {
   NOTIMPLEMENTED();
 }
 
-bool VulkanRenderer::BindFramebufferToTexture(DrawingFrame* frame,
-                                              const ScopedResource* resource) {
+viz::ResourceFormat VulkanRenderer::BackbufferFormat() const {
+  return resource_provider_->best_texture_format();
+}
+
+bool VulkanRenderer::BindFramebufferToTexture(const ScopedResource* resource) {
   NOTIMPLEMENTED();
   return false;
 }
@@ -42,23 +46,25 @@ void VulkanRenderer::SetScissorTestRect(const gfx::Rect& scissor_rect) {
 }
 
 void VulkanRenderer::PrepareSurfaceForPass(
-    DrawingFrame* frame,
     SurfaceInitializationMode initialization_mode,
     const gfx::Rect& render_pass_scissor) {
   NOTIMPLEMENTED();
 }
 
-void VulkanRenderer::DoDrawQuad(DrawingFrame* frame,
-                                const viz::DrawQuad* quad,
+void VulkanRenderer::SetEnableDCLayers(bool enable) {
+  NOTIMPLEMENTED();
+}
+
+void VulkanRenderer::DoDrawQuad(const DrawQuad* quad,
                                 const gfx::QuadF* clip_region) {
   NOTIMPLEMENTED();
 }
 
-void VulkanRenderer::BeginDrawingFrame(DrawingFrame* frame) {
+void VulkanRenderer::BeginDrawingFrame() {
   NOTIMPLEMENTED();
 }
 
-void VulkanRenderer::FinishDrawingFrame(DrawingFrame* frame) {
+void VulkanRenderer::FinishDrawingFrame() {
   NOTIMPLEMENTED();
 }
 
@@ -66,7 +72,7 @@ void VulkanRenderer::FinishDrawingQuadList() {
   NOTIMPLEMENTED();
 }
 
-bool VulkanRenderer::FlippedFramebuffer(const DrawingFrame* frame) const {
+bool VulkanRenderer::FlippedFramebuffer() const {
   NOTIMPLEMENTED();
   return false;
 }
@@ -80,7 +86,6 @@ void VulkanRenderer::EnsureScissorTestDisabled() {
 }
 
 void VulkanRenderer::CopyDrawnRenderPass(
-    DrawingFrame* frame,
     std::unique_ptr<viz::CopyOutputRequest> request) {
   NOTIMPLEMENTED();
 }
