content/browser/compositor/vulkan_browser_compositor_output_surface.cc
@@ -13,7 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace content {
 
 VulkanBrowserCompositorOutputSurface::VulkanBrowserCompositorOutputSurface(
-    scoped_refptr<cc::VulkanContextProvider> context,
+    scoped_refptr<viz::VulkanContextProvider> context,
     const UpdateVSyncParametersCallback& update_vsync_parameters_callback)
     : BrowserCompositorOutputSurface(std::move(context),
                                      update_vsync_parameters_callback),
@@ -88,8 +88,14 @@ void VulkanBrowserCompositorOutputSurface::Reshape(
     const gfx::Size& size,
     float device_scale_factor,
     const gfx::ColorSpace& color_space,
-    bool has_alpha) {
+    bool has_alpha,
+    bool use_stencil) {
   NOTIMPLEMENTED();
+}
+
+void VulkanBrowserCompositorOutputSurface::SetDrawRectangle(
+    const gfx::Rect& rect) {
+  NOTREACHED();
 }
 
 uint32_t
