content/browser/compositor/vulkan_browser_compositor_output_surface.h
@@ -24,7 +24,7 @@ class VulkanBrowserCompositorOutputSurface
     : public BrowserCompositorOutputSurface {
  public:
   VulkanBrowserCompositorOutputSurface(
-      scoped_refptr<cc::VulkanContextProvider> context,
+      scoped_refptr<viz::VulkanContextProvider> context,
       const UpdateVSyncParametersCallback& update_vsync_parameters_callback);
 
   ~VulkanBrowserCompositorOutputSurface() override;
@@ -44,9 +44,11 @@ class VulkanBrowserCompositorOutputSurface
   void Reshape(const gfx::Size& size,
                float device_scale_factor,
                const gfx::ColorSpace& color_space,
-               bool has_alpha) override;
+               bool has_alpha,
+               bool use_stencil) override;
   uint32_t GetFramebufferCopyTextureFormat() override;
   void SwapBuffers(cc::OutputSurfaceFrame frame) override;
+  void SetDrawRectangle(const gfx::Rect& rect) override;
 
  private:
   void SwapBuffersAck();
